create project kingsong

--- a/app/views/static_pages/kingsong2.html.erb
+++ b/app/views/static_pages/kingsong2.html.erb
@@ -1,143 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+<title>Song</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body bgcolor="FFFF99">
 
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>kingsong2</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-</head>
-
-<body>
-
-    <div class="brand">รวมบทเพลงพระราชนิพนธ์</div>
-   
-
-    <!-- Navigation -->
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <!-- navbar-brand is hidden on larger screens, but visible when the menu is collapsed -->
-                <a class="navbar-brand" href="index.html">Business Casual</a>
-            </div>
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                     <li>
-                        <a href="home">Home </a>
-                    </li>
-                    <li>
-                        <a href="kingsong1">kingsong1</a>
-                    </li>
-                    <li>
-                        <a href="kingsong2">kingsong2</a>
-                    </li>
-                    <li>
-                        <a href="kingsong3">kingsong3</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container -->
-    </nav>
-
-    <div class="container">
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                    <hr>
-                    <h2 class="intro-text text-center">kingsong2
-                        <strong>เพลง แสงเทียน</strong>
-                    </h2>
-                    <hr>
-                </div>
-                <div class="col-md-6">
-                    <img class="img-responsive img-border-left" src="img/king05.jpg" alt="">
-                </div>
-                <div class="col-md-6">
-                    <p>จุดเทียนบวงสรวงปวงเทพเจ้า</p>
-					<p>สวดมนต์ค่ำเช้าถึงคราวระทมทน</p>
-					<p>โอ้ชีวิตหนอล้วนรอความตายทุกคน</p>
-					<p>หลีกไปไม่พ้นทุกข์ทนอาทรร้อนใจ</p>
-					<p>ต่างคนเกิดแล้วตายไป</p>
-					<p>ชดใช้เวรกรรมจากจร</p>
-					<p>นิจจังสังขารนั้นไม่เที่ยงเสี่ยงบุญกรรม</p>
-					<p>ทุกคนเคยทำกรรมไว้ก่อน</p>
-					<p>เชิญปวงเทวดาข้าไหว้วอน</p>
-					<p>ขอพรคุ้มไปชีวิตหน้า</p>
-					<p>ทนทรมานมามากแล้วจะกราบลา</p>
-					<p>หนีปวงโรคาที่เบียดเบียน</p>
-					<p>แสงแววชีวาเปรียบแสงเทียน</p>
-					<p>เปรียบเทียนสิ้นแสงยามแรงลมเป่า</p>
-					<p>ชีพดับอับเฉาเหมือนเงาไร้ดวงเทียน</p>
-					<p>จุดเทียนถวายหมายบนบูชาร้องเรียน</p>
-					<p>โรคภัยเบียดเบียนแสงเทียนทานลมพัดโบย</p>
-					<p>โรครุมเร่าร้อนแรงโรย</p>
-					<p>หวนโหยอาวรณ์อ่อนใจ</p>
-					<p>ทำบุญทำทานกันไว้เถิดเกิดเป็นคน</p>
-					<p>ไว้เตรียมผจญชีวิตใหม่</p>
-					<p>เคยทำบุญทำคุณปางก่อนใด</p>
-					<p>ขอบุญคุ้มไปชีวิตหน้า</p>
-					<p>ทนทรมานมามากแล้วจะกราบลา</p>
-					<p>แสงเทียนบูชาจะดับพลัน</p>
-					<p>แสงเทียนบูชาดับลับไป</p>
-                   
-                </div>
-                <div class="clearfix"></div>
-            </div>
-        </div>
-
-       
-
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-white w3-wide w3-padding w3-card-2">
+    <a href="home" class="w3-bar-item w3-button"><b>รวมบทเพลงพระราชนิพนธ์</b> </a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="kingsong1" class="w3-bar-item w3-button">Kingsong1</a>
+      <a href="kingsong2" class="w3-bar-item w3-button">Kingsong2</a>
+      <a href="kingsong3" class="w3-bar-item w3-button">Kingsong3</a>
     </div>
-    <!-- /.container -->
+  </div>
+</div>
 
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p>รหัสนิสิต 57160517  น.ส.กฤติมา  ปลั่งคล้ายแข</p>
-                </div>
-            </div>
-        </div>
-    </footer>
+<!-- Header -->
+<header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+  <img class="w3-image" src="/w3images/architect.jpg" alt="Architecture" width="1500" height="800">
+  <div class="w3-display-middle w3-margin-top w3-center">
+    <h1 class="w3-xxlarge w3-text-white"><span class="w3-padding w3-black w3-opacity-min"><b>BR</b></span> <span class="w3-hide-small w3-text-light-grey">Architects</span></h1>
+  </div>
+</header>
 
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+<!-- Page content -->
+<div class="w3-content w3-padding" style="max-width:1564px">
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+  <!-- Project Section -->
+  <div class="w3-container w3-padding-32" id="projects">
+    
+  </div>
+
+  
+
+
+  
+   
+<!-- End page content -->
+</div>
+<center><div class="w3-container w3-padding-32" id="projects" >
+
+
+    <h3 class="w3-border-bottom w3-border-light-grey w3-padding-16" >เพลง แสงเทียน</h3>
+  </div><center>
+<center><div class="col-md-6">
+                    <p>จุดเทียนบวงสรวงปวงเทพเจ้า</p>
+                    <p>สวดมนต์ค่ำเช้าถึงคราวระทมทน</p>
+                    <p>โอ้ชีวิตหนอล้วนรอความตายทุกคน</p>
+                    <p>หลีกไปไม่พ้นทุกข์ทนอาทรร้อนใจ</p>
+                    <p>ต่างคนเกิดแล้วตายไป</p>
+                    <p>ชดใช้เวรกรรมจากจร</p>
+                    <p>นิจจังสังขารนั้นไม่เที่ยงเสี่ยงบุญกรรม</p>
+                    <p>ทุกคนเคยทำกรรมไว้ก่อน</p>
+                    <p>เชิญปวงเทวดาข้าไหว้วอน</p>
+                    <p>ขอพรคุ้มไปชีวิตหน้า</p>
+                    <p>ทนทรมานมามากแล้วจะกราบลา</p>
+                    <p>หนีปวงโรคาที่เบียดเบียน</p>
+                    <p>แสงแววชีวาเปรียบแสงเทียน</p>
+                    <p>เปรียบเทียนสิ้นแสงยามแรงลมเป่า</p>
+                    <p>ชีพดับอับเฉาเหมือนเงาไร้ดวงเทียน</p>
+                    <p>จุดเทียนถวายหมายบนบูชาร้องเรียน</p>
+                    <p>โรคภัยเบียดเบียนแสงเทียนทานลมพัดโบย</p>
+                    <p>โรครุมเร่าร้อนแรงโรย</p>
+                    <p>หวนโหยอาวรณ์อ่อนใจ</p>
+                    <p>ทำบุญทำทานกันไว้เถิดเกิดเป็นคน</p>
+                    <p>ไว้เตรียมผจญชีวิตใหม่</p>
+                    <p>เคยทำบุญทำคุณปางก่อนใด</p>
+                    <p>ขอบุญคุ้มไปชีวิตหน้า</p>
+                    <p>ทนทรมานมามากแล้วจะกราบลา</p>
+                    <p>แสงเทียนบูชาจะดับพลัน</p>
+                    <p>แสงเทียนบูชาดับลับไป</p>
+                   
+                </div></center>
+  
+<!-- Google Map -->
+<div id="googleMap" class="w3-grayscale" style="width:100%;height:450px;"></div>
+
+<!-- Footer -->
+<footer class="w3-center w3-black w3-padding-16">
+  <p>รหัสนิสิต 57160517  น.ส. กฤติมา  ปลั่งคล้ายแข <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green"></a></p>
+</footer>
+
+<!-- Add Google Maps -->
+
+-->
 
 </body>
 
